Fixed an off-center issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,12 @@ a {
   overflow: hidden;
 }
 
+@-moz-document url-prefix() { 
+  .abscentered {
+     transform: translate(-50%, -50%);
+  }
+}
+
 .bg {
     background-color: white;
     padding: 15px;
